[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/EnemyGunRotating.gd" type="Script" id=1]
[ext_resource path="res://Textures/enemy4.png" type="Texture" id=2]
[ext_resource path="res://scripts/Sprite.gd" type="Script" id=3]
[ext_resource path="res://Textures/enemy/shmup_drone_base.png" type="Texture" id=4]
[ext_resource path="res://scripts/body.gd" type="Script" id=5]
[ext_resource path="res://sfx/Explosions/SplodeSmall.wav" type="AudioStream" id=6]
[ext_resource path="res://sfx/Impacts/DumpTrash.wav" type="AudioStream" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 30.0

[node name="EnemyGunRotating" type="Area2D" groups=[
"Enemy",
]]
collision_layer = 2
script = ExtResource( 1 )
timer = 0.1
burstTime = 10.0
breakTime = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="enemy1" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )
flip_h = true
script = ExtResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="body" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )
script = ExtResource( 5 )

[node name="3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0

[node name="damage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -20.0
[connection signal="area_entered" from="." to="." method="_on_Enemy_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_EnemyGunRotating_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
